made a funciton that generates 10 random numbers for the array, also made the project modular

--- a/index.html
+++ b/index.html
@@ -11,13 +11,11 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="style.css" />
-
     <title>Project</title>
   </head>
 
   <body>
     <h1 id="output"></h1>
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
   </body>
 </html>
